# net-prog-project

./: .gitignore  README.md
.github/workflows/: c-cpp.yml
client/: pom.xml
client-java/: pom.xml
client-java/src/main/java/: module-info.java
client-java/src/main/java/com/netprog/client/: Client.java  HelloApplication.java  HelloController.java  MsgExtractorJNI.java  MsgHeader.java  Server.java  TCPClient.java  TryJNI.java
client-java/src/main/java/com/netprog/client/Experiment/: Client.java  MsgExtractorJNI.java  MsgHeaderJNI.java  Server.java  TryJNI.java  TryJNRFFI.java
client-java/src/main/resources/com/netprog/client/: hello-view.fxml
client/src/main/java/: module-info.java
client/src/main/java/com/netprog/client/: HelloApplication.java
client/src/main/resources/com/netprog/client/: hello-view.fxml
server/: .gitignore  CMakeLists.txt
server/jni/: CMakeLists.txt  msg_extractor.c  tryJNI.c
server/jni/utils/: get_class.h
server/lib/: CMakeLists.txt  README.md  main.c
server/lib/cgen/: CMakeLists.txt  bkcgen.c  bkcgen.h
server/lib/common/: all.h  msg.h  std.h  utils.h
server/lib/msg/: msg-body.h  msg-header.c  msg-header.h
server/lib/msg/body/: file.c  file.h  str.c  str.h
server/lib/test/: CMakeLists.txt
server/lib/test/ds/: dllist.c
server/lib/test/net/: test-server.c
server/lib/test/utils/: test-content-str.c  test-file.c  test-msg.c
server/lib/utils/: color.h  debug.h  error.h  file.c  file.h  sig-handler.c  sig-handler.h  string.c  string.h  thread.c  thread.h
server/test/: CMakeLists.txt  data-sz.c
server/test/base/: utils.h
server/test/ds/: dllist.c  map.c
server/test/net/: io-multiplexing.c  test-multi-thread-server.c  test-server.c
server/test/utils/: test-content-str.c  test-file.c  test-msg.c
server/wasm/: CMakeLists.txt  README.md  hello.c
